--- a/src/spiderproj_bringup/package.xml
+++ b/src/spiderproj_bringup/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>spiderproj_bringup</name>
   <version>1.0.0</version>
-  <description>Bring-up pachage for Chipo the Hexapod. Contains node launch files, Rviz launch file, Gazebo launch file, and the main bring-up launch file.</description>
+  <description>Bring-up package for Chipo the Hexapod. Contains node launch files, Rviz launch file, Gazebo launch file, and the main bring-up launch file.</description>
   <maintainer email="jirakorn.sukmee@gmail.com">Jirakorn Sukmee</maintainer>
   <license>MIT</license>
 
