--- a/src/spiderproj_kinematics/CMakeLists.txt
+++ b/src/spiderproj_kinematics/CMakeLists.txt
@@ -10,13 +10,12 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(orocos_kdl_vendor REQUIRED)
 find_package(spiderproj_msgs REQUIRED)
-find_package(servo2040_uros REQUIRED)
 find_package(sensor_msgs REQUIRED)
 # find_package(eigen3_cmake_module REQUIRED)
 # find_package(Eigen3)
 
 add_executable(spiderproj_kinematics src/kinematics.cpp)
-ament_target_dependencies(spiderproj_kinematics rclcpp std_msgs orocos_kdl spiderproj_msgs servo2040_uros sensor_msgs)
+ament_target_dependencies(spiderproj_kinematics rclcpp std_msgs orocos_kdl spiderproj_msgs sensor_msgs)
 
 install(TARGETS 
   spiderproj_kinematics
