--- a/src/spiderproj_nrf24/CMakeLists.txt
+++ b/src/spiderproj_nrf24/CMakeLists.txt
@@ -8,14 +8,15 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+
 
 include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
 
 add_executable(rf24_node src/rf24_node.cpp)
 target_link_libraries(rf24_node rf24)
-ament_target_dependencies(rf24_node rclcpp std_msgs)
+ament_target_dependencies(rf24_node rclcpp sensor_msgs)
 
 install(TARGETS
   rf24_node
