--- a/src/spiderproj_msg/CMakeLists.txt
+++ b/src/spiderproj_msg/CMakeLists.txt
@@ -26,6 +26,9 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Current.msg"
   "msg/FeetContacts.msg"
   "msg/JointAngles.msg"
+
+  "msg/Relay.msg"
+  "msg/Servo2040Data.msg"
   DEPENDENCIES geometry_msgs std_msgs
 )
 
